# Face-Recognition-Backend--Final-Year-

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
face_recognition_app/: check_firebase.py  main.py  run_server.py
face_recognition_app/app/: dependencies.py  socket_manager.py
face_recognition_app/app/routes/: face_router.py
face_recognition_app/app/sockets/: sio_app.py
face_recognition_app/app/tests/: test_main.py
face_recognition_app/app/utils/: config.py  face_utils.py  firebase_utils.py  setting.py
tests/: test_route.py
training/: EncodeGenerator.py  firebaseDatabase.py  main.py
